footer html corrigé

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                         <div class="restaurant__cards">
                                 <article class="card">
-                                    <a href="/restaurants/palettedugout.html">
+                                    <a href="restaurants/palettedugout.html">
                                         <img class="card__image" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image-hotel du port">
                                         </a>
                                         <div class="card__news">
@@ -159,15 +159,15 @@
                     <div class="footer__txt">
                         <div class="footer__txt--link">
                             <i class="fa-solid fa-utensils"></i>
-                            <a href="#"><p>Proposer un restaurant</p></a>
+                            <a href="#"><span>Proposer un restaurant</span></a>
                         </div>
                         
                         <div class="footer__txt--link"> 
                             <i class="fa-solid fa-handshake-angle"></i>
-                            <a href="#"><p>Devenir partenaire</p></a>
+                            <a href="#"><span>Devenir partenaire</span></a>
                         </div>
-                        <a href="#"><p>Mentions légales</p></a>
-                        <a href="#"><p>Contact</p></a>
+                        <a href="#"><span>Mentions légales</span></a>
+                        <a href="#"><span>Contact</span></a>
                     </div>
             </div>
         </footer>
