problémes résolu et site en ligne

--- a/restaurants/delicedessens.html
+++ b/restaurants/delicedessens.html
@@ -66,9 +66,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Tartare de thon</h3>
-                  <div class="menu__choice--description">
                     <p class="menu__choice--description">Assaisonné au yuzu</p>
-                  </div>
                 </div>
 
                 <div class="price">25€</div>
@@ -84,9 +82,8 @@
                   <h3 class="menu__choice--title">
                     Bouchée de homard croustillant
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Et sa farandole de petits légumes</p>
-                  </div>
+                    <p class="menu__choice--description">Et sa farandole de petits légumes</p>
+    
                 </div>
                 <div class="price">35€</div>
 
@@ -102,9 +99,8 @@
                   <h3 class="menu__choice--title">
                     Poulet rôti aux herbes de Provence
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Et sa crème de truffe</p>
-                  </div>
+                    <p class="menu__choice--description">Et sa crème de truffe</p>
+                  
                 </div>
                 <div class="price">40€</div>
 
@@ -125,9 +121,7 @@
                   <h3 class="menu__choice--title">
                     Poulet rôti aux herbes de Provence
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Et sa crème de truffe</p>
-                  </div>
+                    <p class="menu__choice--description">Et sa crème de truffe</p>
                 </div>
                 <div class="price">40€</div>
 
@@ -141,9 +135,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Langouste rôtie</h3>
-                  <div class="menu__choice--description">
-                    <p>Et ses légumes de saison</p>
-                  </div>
+                    <p class="menu__choice--description">Et ses légumes de saison</p>
                 </div>
                 <div class="price">35€</div>
 
@@ -157,9 +149,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Côte de bœuf Angus</h3>
-                  <div class="menu__choice--description">
-                    <p>Et sa purée de panais</p>
-                  </div>
+                    <p class="menu__choice--description">Et sa purée de panais</p>
                 </div>
                 <div class="price">44€</div>
 
@@ -178,9 +168,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Farandole de desserts</h3>
-                  <div class="menu__choice--description">
-                    <p>Du chef</p>
-                  </div>
+                    <p class="menu__choice--description">Du chef</p>
                 </div>
                 <div class="price">18€</div>
                 <div class="checkbox">
@@ -193,9 +181,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Crème brulée</h3>
-                  <div class="menu__choice--description">
-                    <p>Revisitée</p>
-                  </div>
+                  <p class="menu__choice--description">Revisitée</p>
                 </div>
                 <div class="price">22€</div>
                 <div class="checkbox">
@@ -208,9 +194,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Tiramisu</h3>
-                  <div class="menu__choice--description">
-                    <p>À la noisette</p>
-                  </div>
+                    <p class="menu__choice--description">À la noisette</p>
                 </div>
                 <div class="price">23€</div>
                 <div class="checkbox">
