--- a/restaurants/francais.html
+++ b/restaurants/francais.html
@@ -66,9 +66,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Tartare de pouple acidulé</h3>
-                  <div class="menu__choice--description">
                     <p class="menu__choice--description">Aux zestes d'orange</p>
-                  </div>
                 </div>
 
                 <div class="price">25€</div>
@@ -84,9 +82,7 @@
                   <h3 class="menu__choice--title">
                     Velouté de légumes d'antan
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Carotte,panais, topinambour</p>
-                  </div>
+                    <p class="menu__choice--description">Carotte,panais, topinambour</p>
                 </div>
                 <div class="price">35€</div>
 
@@ -100,9 +96,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Soupe à l'oignon</h3>
-                  <div class="menu__choice--description">
-                    <p>Revisitée</p>
-                  </div>
+                    <p class="menu__choice--description">Revisitée</p>
                 </div>
                 <div class="price">20€</div>
 
@@ -121,9 +115,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Coquilles Saint-Jacques</h3>
-                  <div class="menu__choice--description">
-                    <p>Accompagnées d'une purée de panais</p>
-                  </div>
+                    <p class="menu__choice--description">Accompagnées d'une purée de panais</p>
                 </div>
                 <div class="price">40€</div>
 
@@ -137,9 +129,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Magret de canard</h3>
-                  <div class="menu__choice--description">
-                    <p>Et parmentier de pommes de terre</p>
-                  </div>
+                    <p class="menu__choice--description">Et parmentier de pommes de terre</p>
                 </div>
                 <div class="price">35€</div>
 
@@ -155,9 +145,7 @@
                   <h3 class="menu__choice--title">
                     Pigeonneau d’Ille-et-Vilaine
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Sur son lit de gnocchis aux légumes</p>
-                  </div>
+                    <p class="menu__choice--description">Sur son lit de gnocchis aux légumes</p>
                 </div>
                 <div class="price">44€</div>
 
@@ -178,9 +166,7 @@
                   <h3 class="menu__choice--title">
                     Pétales de violettes glacés
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Et purée de noisettes</p>
-                  </div>
+                    <p class="menu__choice--description">Et purée de noisettes</p>
                 </div>
                 <div class="price">18€</div>
                 <div class="checkbox">
@@ -193,9 +179,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Fondant au chocolat</h3>
-                  <div class="menu__choice--description">
-                    <p>Revisitée</p>
-                  </div>
+                    <p class="menu__choice--description">Revisitée</p>
                 </div>
                 <div class="price">22€</div>
                 <div class="checkbox">
@@ -208,9 +192,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Millefeuille croustillant</h3>
-                  <div class="menu__choice--description">
-                    <p>Myrtilles et pâte d’amande</p>
-                  </div>
+                    <p class="menu__choice--description">Myrtilles et pâte d’amande</p>
                 </div>
                 <div class="price">23€</div>
                 <div class="checkbox">
