--- a/restaurants/noteenchantee.html
+++ b/restaurants/noteenchantee.html
@@ -66,11 +66,9 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Ravioles de foie gras</h3>
-                  <div class="menu__choice--description">
                     <p class="menu__choice--description">
                       Accompagnées de leur crème à la truffe
                     </p>
-                  </div>
                 </div>
 
                 <div class="price">25€</div>
@@ -84,9 +82,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Caviar osciètre</h3>
-                  <div class="menu__choice--description">
-                    <p>Sur blini à la farine de blé noir</p>
-                  </div>
+                    <p class="menu__choice--description">Sur blini à la farine de blé noir</p>
                 </div>
                 <div class="price">35€</div>
 
@@ -102,9 +98,7 @@
                   <h3 class="menu__choice--title">
                     Homard et espuma de potiron
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Marinés aux zestes d'orange</p>
-                  </div>
+                    <p class="menu__choice--description">Marinés aux zestes d'orange</p>
                 </div>
                 <div class="price">20€</div>
 
@@ -120,9 +114,7 @@
                   <h3 class="menu__choice--title">
                     Foie gras de canard cuit entier
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Confiture de figue et pain toasté</p>
-                  </div>
+                    <p class="menu__choice--description">Confiture de figue et pain toasté</p>
                 </div>
                 <div class="price">35€</div>
 
@@ -143,9 +135,7 @@
                   <h3 class="menu__choice--title">
                     Noix de coquilles Saint-Jacques
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Sur lit de purée de céleri-rave</p>
-                  </div>
+                    <p class="menu__choice--description">Sur lit de purée de céleri-rave</p>
                 </div>
                 <div class="price">40€</div>
 
@@ -159,9 +149,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Langoustine poêlée</h3>
-                  <div class="menu__choice--description">
-                    <p>Purée de patate douce</p>
-                  </div>
+                    <p class="menu__choice--description">Purée de patate douce</p>
                 </div>
                 <div class="price">35€</div>
 
@@ -175,9 +163,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Mijoté de queue de bœuf</h3>
-                  <div class="menu__choice--description">
-                    <p>Et riz sauvage aux zestes de citron</p>
-                  </div>
+                    <p class="menu__choice--description">Et riz sauvage aux zestes de citron</p>
                 </div>
                 <div class="price">45€</div>
 
@@ -198,9 +184,7 @@
                   <h3 class="menu__choice--title">
                     Macaron noisette et chocolat
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Glace au caramel brun et sel de Guérande</p>
-                  </div>
+                    <p class="menu__choice--description">Glace au caramel brun et sel de Guérande</p>
                 </div>
                 <div class="price">18€</div>
                 <div class="checkbox">
