--- a/restaurants/palettedugout.html
+++ b/restaurants/palettedugout.html
@@ -65,11 +65,9 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Fricassée d'escargots</h3>
-                  <div class="menu__choice--description">
                     <p class="menu__choice--description">
                       Au piment d'Espelette
                     </p>
-                  </div>
                 </div>
 
                 <div class="price">25€</div>
@@ -85,9 +83,7 @@
                   <h3 class="menu__choice--title">
                     Foie gras de canard mi-cuit
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Et ses copeaux de truffe noire</p>
-                  </div>
+                    <p class="menu__choice--description">Et ses copeaux de truffe noire</p>
                 </div>
                 <div class="price">35€</div>
 
@@ -101,9 +97,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Œuf au plat</h3>
-                  <div class="menu__choice--description">
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
-                  </div>
+                    <p class="menu__choice--description">Assaisonné à la truffe sur lit de caviar</p>
                 </div>
                 <div class="price">20€</div>
 
@@ -122,9 +116,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Filet de bœuf aux herbes</h3>
-                  <div class="menu__choice--description">
-                    <p>Accompagné de sa ribambelle de légumes</p>
-                  </div>
+                    <p class="menu__choice--description">Accompagné de sa ribambelle de légumes</p>
                 </div>
                 <div class="price">40€</div>
 
@@ -140,9 +132,7 @@
                   <h3 class="menu__choice--title">
                     Parmentier de queue de bœuf
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>À la truffe noire sur sa purée de panais</p>
-                  </div>
+                    <p class="menu__choice--description">À la truffe noire sur sa purée de panais</p>
                 </div>
                 <div class="price">35€</div>
 
@@ -156,9 +146,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Filet de turbot</h3>
-                  <div class="menu__choice--description">
-                    <p>Aux agrumes</p>
-                  </div>
+                    <p class="menu__choice--description">Aux agrumes</p>
                 </div>
                 <div class="price">44€</div>
 
@@ -177,9 +165,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Paris-Brest</h3>
-                  <div class="menu__choice--description">
-                    <p>Revisité</p>
-                  </div>
+                    <p class="menu__choice--description">Revisité</p>
                 </div>
                 <div class="price">18€</div>
                 <div class="checkbox">
@@ -194,9 +180,7 @@
                   <h3 class="menu__choice--title">
                     Macaron au chocolat d'exception
                   </h3>
-                  <div class="menu__choice--description">
-                    <p>Et glace à la vanille de Madagascar</p>
-                  </div>
+                    <p class="menu__choice--description">Et glace à la vanille de Madagascar</p>
                 </div>
                 <div class="price">22€</div>
                 <div class="checkbox">
@@ -209,9 +193,7 @@
               <div class="menu__choice">
                 <div class="menu__choice--content">
                   <h3 class="menu__choice--title">Mousse au chocolat</h3>
-                  <div class="menu__choice--description">
-                    <p>Au piment d'Espelette et à la truffe noire</p>
-                  </div>
+                    <p class="menu__choice--description">Au piment d'Espelette et à la truffe noire</p>
                 </div>
                 <div class="price">23€</div>
                 <div class="checkbox">
